--- a/iae-ui/package.json
+++ b/iae-ui/package.json
@@ -29,7 +29,8 @@
     "systemjs": "0.19.40",
     "core-js": "^2.4.1",
     "rxjs": "5.0.1",
-    "zone.js": "^0.7.4"
+    "zone.js": "^0.7.4",
+    "bootstrap":"3.3.7"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.36",
