--- a/iae-ui/tsconfig.json
+++ b/iae-ui/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "outDir" :"app/js",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
