Commit Login Service, Registration Service and ResetPassword Service

--- a/iae-app/pom.xml
+++ b/iae-app/pom.xml
@@ -47,6 +47,10 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-jersey</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>com.google.code.gson</groupId>
+        	<artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
