--- a/iae-app/pom.xml
+++ b/iae-app/pom.xml
@@ -39,10 +39,10 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <dependency>
+        <!-- <dependency>
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-jta-narayana</artifactId>
-        </dependency>
+        </dependency> -->
         <dependency>
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-jersey</artifactId>
