--- a/iae-app/src/main/java/application.properties
+++ b/iae-app/src/main/java/application.properties
@@ -1,6 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/iaewsdb
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
