--- a/iae-ui/package.json
+++ b/iae-ui/package.json
@@ -31,7 +31,8 @@
     "file-saver": "^1.3.3",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
-    "zone.js": "^0.7.4"
+    "zone.js": "^0.7.4",
+    "file-saver": "1.3.3"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.36",
