--- a/iae-ui/package.json
+++ b/iae-ui/package.json
@@ -25,14 +25,15 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
+    "angular-2-local-storage": "1.0.1",
     "angular-in-memory-web-api": "~0.2.4",
     "bootstrap": "3.3.7",
     "core-js": "^2.4.1",
-    "file-saver": "^1.3.3",
+    "file-saver": "1.3.3",
+    "ng2-webstorage": "^1.5.0",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
-    "zone.js": "^0.7.4",
-    "file-saver": "1.3.3"
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.36",
