--- a/iae-app/pom.xml
+++ b/iae-app/pom.xml
@@ -3,9 +3,11 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework</groupId>
-    <artifactId>gs-spring-boot</artifactId>
-    <version>0.1.0</version>
+    <groupId>org.iae</groupId>
+    <artifactId>iae-app</artifactId>
+    <version>1.0</version>
+
+<packaging>war</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -18,12 +20,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+<dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+      <scope>provided</scope>
+</dependency>        
         <!-- tag::actuator[] -->
-        <dependency>
+ <!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!-- end::actuator[] -->
+ -->        <!-- end::actuator[] -->
         <!-- tag::tests[] -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -43,11 +51,11 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-jta-narayana</artifactId>
         </dependency> -->
-        <dependency>
+<!--         <dependency>
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-jersey</artifactId>
         </dependency>
-        <dependency>
+ -->        <dependency>
         	<groupId>com.google.code.gson</groupId>
         	<artifactId>gson</artifactId>
         </dependency>
@@ -55,15 +63,17 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <start-class>org.iae.Application</start-class>
     </properties>
 
     <build>
+    <finalName>iae-services</finalName>
         <plugins>
-            <plugin>
+<!--             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
+ -->            <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <executions>
                     <execution>
